--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-11  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/mol_readlog.m: fixed typo.
+
 2014-01-29  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/mol_dbstart.m: changed default colors for C and H.
