--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-28  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/tex_dbstart.m: two new textures (stripes and damascus).
+
 2014-03-13  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/camera.m: all fields are initialized as empty arrays.
