changed lighting parameters, one todo entry

--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
+(!) fix the problem with cr_read_espresso (see gold surfaces example)
 (!) fix the examples in escher_data
 (!) fix the examples in the webpage
 
