--- a/doc/devs.org
+++ b/doc/devs.org
@@ -164,6 +164,8 @@ v means variable (global)
 | + | rep_setdefaultscene_meshlab     | fun            | rep         | Set the scene with meshlab camera, light and bg color     |
 | + | rep_transform                   | fun            | rep         | Rotate and translate balls, sticks and vertices of a rep  |
 | + | rep_surface                     | fun            | rep         | Create the representation of a parametric surface         |
+| + | rep_addcube                     | fun            | rep         | Add a cube to the representation                          |
+| + | rep_addsphere                   | fun            | rep         | Add a sphere to the representation                        |
 | + | rep_polygon                     | fun            | rep         | Add a polygon to the representation                       |
 | + | rep_write_off                   | fun            | stdout      | Write the rep to a geomview file                          |
 | + | rep_write_coff                  | fun            | stdout      | Write the rep to a geomview file with colored vertices    |
