updated the pointer to the escher examples directory

--- a/README
+++ b/README
@@ -130,7 +130,9 @@ Examples
 --------
 
 You can find several examples of escher plots in the examples
-directory (escher_data), which should come in a separate repository.
+directory (escher_data), which can be downloaded from:
+
+https://github.com/aoterodelaroza/escher_examples
 
 Copyright notice
 ----------------
